fix code smells (#127)